// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`DownloadAndOSSelection aarch64-openshift-install renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
      sm={12}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
      sm={12}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
        <FormSelectOption
          key="arm"
          label="aarch64"
          value="arm"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
      sm={12}
    >
      <DownloadButton
        disabled={false}
        tool="aarch64-openshift-install"
        url="https://mirror.openshift.com/pub/openshift-v4/aarch64/clients/ocp/stable/openshift-install-linux-amd64.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection crc renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
      sm={12}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
        <FormSelectOption
          key="windows"
          label="Windows"
          value="windows"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
      sm={12}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={true}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
      sm={12}
    >
      <DownloadButton
        disabled={false}
        tool="crc"
        url="https://developers.redhat.com/content-gateway/rest/mirror/pub/openshift-v4/clients/crc/latest/crc-linux-amd64.tar.xz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection oc renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
      sm={12}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
        <FormSelectOption
          key="windows"
          label="Windows"
          value="windows"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
      sm={12}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
        <FormSelectOption
          key="arm"
          label="aarch64"
          value="arm"
        />
        <FormSelectOption
          key="ppc"
          label="ppc64le"
          value="ppc"
        />
        <FormSelectOption
          key="s390x"
          label="s390x"
          value="s390x"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
      sm={12}
    >
      <DownloadButton
        disabled={false}
        tool="oc"
        url="https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/stable/openshift-client-linux.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection ppc64le-openshift-install renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
      sm={12}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
      sm={12}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
        <FormSelectOption
          key="ppc"
          label="ppc64le"
          value="ppc"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
      sm={12}
    >
      <DownloadButton
        disabled={false}
        tool="ppc64le-openshift-install"
        url="https://mirror.openshift.com/pub/openshift-v4/ppc64le/clients/ocp/stable/openshift-install-linux-amd64.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection s390x-openshift-install renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
      sm={12}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
      sm={12}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
        <FormSelectOption
          key="s390x"
          label="s390x"
          value="s390x"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
      sm={12}
    >
      <DownloadButton
        disabled={false}
        tool="s390x-openshift-install"
        url="https://mirror.openshift.com/pub/openshift-v4/s390x/clients/ocp/stable/openshift-install-linux-amd64.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection with error should render 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
      sm={12}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
      sm={12}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={true}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
      sm={12}
    >
      <DownloadButton
        disabled={true}
        tool="x86_64-openshift-install"
        url="https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/stable/openshift-install-linux.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;

exports[`DownloadAndOSSelection x86_64-openshift-install renders correctly 1`] = `
<Fragment>
  <Grid
    className="os-based-download"
    hasGutter={true}
  >
    <GridItem
      md={3}
      sm={12}
    >
      <FormSelect
        aria-label="Select OS dropdown"
        className=""
        isDisabled={false}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="linux"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select OS"
          value="select"
        />
        <FormSelectOption
          key="linux"
          label="Linux"
          value="linux"
        />
        <FormSelectOption
          key="mac"
          label="MacOS"
          value="mac"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={4}
      sm={12}
    >
      <FormSelect
        aria-label="Select architecture dropdown"
        className=""
        isDisabled={true}
        isRequired={false}
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        ouiaSafe={true}
        validated="default"
        value="x86"
      >
        <FormSelectOption
          isDisabled={true}
          key="select"
          label="Select architecture"
          value="select"
        />
        <FormSelectOption
          key="x86"
          label="x86_64"
          value="x86"
        />
      </FormSelect>
    </GridItem>
    <GridItem
      md={5}
      sm={12}
    >
      <DownloadButton
        disabled={false}
        tool="x86_64-openshift-install"
        url="https://mirror.openshift.com/pub/openshift-v4/x86_64/clients/ocp/stable/openshift-install-linux.tar.gz"
      />
    </GridItem>
  </Grid>
</Fragment>
`;
